@@ -1,3 +1,7 @@
+2001-05-20  Martin Baulig  <baulig@suse.de>
+
+	* libgnomeui-components.c: Use GnomeSelectorFactory
+
 2001-05-19  Martin Baulig  <baulig@suse.de>
 
 	* gnome-image-entry-component.[ch]: Moved here from ../libgnomeui.
